objects/Account.object
<CustomObject>
    <fields>
        <fullName>Care_Ticket_Percent_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Care Ticket Percent - Last Quarter</description>
        <inlineHelpText>SPM Care Ticket Percent - Last Quarter</inlineHelpText>
        <label>Care Ticket Percent - Last Quarter</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_Percent_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Conversion Rate Percent - Last Quarter</description>
        <inlineHelpText>Conversion Rate Percent - Last Quarter</inlineHelpText>
        <label>Conversion Rate Percent - Last Quarter</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Delinquency_Predictor__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Current Delinquency Predictor</description>
        <inlineHelpText>Current Delinquency Predictor</inlineHelpText>
        <label>Current Delinquency Predictor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_Percent_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Cycle Time Percent - Last Quarter</description>
        <inlineHelpText>SPM Cycle Time Percent - Last Quarter</inlineHelpText>
        <label>Cycle Time Percent - Last Quarter</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <description>SPM Doing Business As</description>
        <inlineHelpText>Doing Business As</inlineHelpText>
        <label>Doing Business As</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA__c</fullName>
        <description>SPM EPA</description>
        <inlineHelpText>EPA</inlineHelpText>
        <label>EPA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Provider_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Estimated Total Provider Revenue (including Home Depot)</description>
        <inlineHelpText>Estimated Total Provider Revenue (including Home Depot)</inlineHelpText>
        <label>Est. Total Provider Revenue (Inc. HD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Stress_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Financial Stress Score</description>
        <inlineHelpText>Financial Stress Score</inlineHelpText>
        <label>Financial Stress Score</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HD_Pro_Spend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM HD Pro Spend - HD Pro Spend - Last 4 quarters</description>
        <inlineHelpText>HD Pro Spend - HD Pro Spend - Last 4 quarters</inlineHelpText>
        <label>HD Pro Spend - Last 4 quarters</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IVOC_Number_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>IVOC Number - Last Quarter</description>
        <inlineHelpText>IVOC Number - Last Quarter</inlineHelpText>
        <label>IVOC Number - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Audit__c</fullName>
        <description>SPM Insurance Audit</description>
        <inlineHelpText>Insurance Audit</inlineHelpText>
        <label>Insurance Audit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_expiration__c</fullName>
        <description>SPM Enter Insurance expiration</description>
        <inlineHelpText>Enter Insurance expiration</inlineHelpText>
        <label>Insurance expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_4_Quarters_THD_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Last 4 Quarters THD Revenue - Home Depot Revenue – Last 4 Quarters</description>
        <inlineHelpText>Last 4 Quarters THD Revenue - Home Depot Revenue – Last 4 Quarters</inlineHelpText>
        <label>Home Depot Revenue – Last 4 Quarters</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <description>SPM Last Review Date</description>
        <inlineHelpText>Last Review Date</inlineHelpText>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Audit__c</fullName>
        <description>SPM License Audit</description>
        <inlineHelpText>License Audit</inlineHelpText>
        <label>License Audit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_Change__c</fullName>
        <description>SPM Need Change</description>
        <inlineHelpText>Need Change</inlineHelpText>
        <label>Need Change</label>
        <picklist>
            <picklistValues>
                <fullName>Better</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_badge_No_background__c</fullName>
        <description>SPM No badge / No background</description>
        <inlineHelpText>No badge / No background</inlineHelpText>
        <label>No badge No background</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paydex_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Paydex Number</description>
        <inlineHelpText>Paydex Number</inlineHelpText>
        <label>Paydex Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_Business_with_Home_Depot__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Percent of Business with Home Depot - Estimated % of Business with Home Depot</description>
        <inlineHelpText>Percent of Business with Home Depot - Estimated % of Business with Home Depot</inlineHelpText>
        <label>Estimated % of Business with Home Depot</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Permit_Audit__c</fullName>
        <description>SPM Permit Audit</description>
        <inlineHelpText>Permit Audit</inlineHelpText>
        <label>Permit Audit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Delinquency_Predictor__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Previous Delinquency Predictor</description>
        <inlineHelpText>Previous Delinquency Predictor</inlineHelpText>
        <label>Previous Delinquency Predictor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_for_Growth__c</fullName>
        <description>SPM Program for Growth</description>
        <inlineHelpText>Program for Growth</inlineHelpText>
        <label>Program for Growth</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBI_Care_Ticket_Score_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SBI Care Ticket Score - Last Quarter</description>
        <inlineHelpText>SBI Care Ticket Score - Last Quarter</inlineHelpText>
        <label>SBI Care Ticket Score - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBI_Cycle_Time_Score_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SBI Cycle Time Score - Last Quarter</description>
        <inlineHelpText>SBI Cycle Time Score - Last Quarter</inlineHelpText>
        <label>SBI Cycle Time Score - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBI_IVOC_Score_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SBI IVOC Score - Last Quarter</description>
        <inlineHelpText>SBI IVOC Score - Last Quarter</inlineHelpText>
        <label>SBI IVOC Score - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBI_Overall_Score_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SBI Overall Score - Last Quarter</description>
        <inlineHelpText>SBI Overall Score - Last Quarter</inlineHelpText>
        <label>SBI Overall Score - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBI_Sales_Score_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SBI Sales Score - Last Quarter</description>
        <inlineHelpText>SBI Sales Score - Last Quarter</inlineHelpText>
        <label>SBI Sales Score - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPM_Employee_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Employee Count</description>
        <inlineHelpText>SPM Employee Count</inlineHelpText>
        <label>Employees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Review_Recommendation__c</fullName>
        <description>SPM SP Review Recommendation</description>
        <inlineHelpText>SP Review Recommendation</inlineHelpText>
        <label>SP Review Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Dollar_Last_Quater__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sales Dollar - Last Quarter</description>
        <inlineHelpText>Sales Dollar - Last Quarter</inlineHelpText>
        <label>Sales Dollar - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Source Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Risk_Evaluation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Supplier Risk Evaluation</description>
        <inlineHelpText>Supplier Risk Evaluation</inlineHelpText>
        <label>Supplier Risk Evaluation</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Stability_Index__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Supplier Stability Index</description>
        <inlineHelpText>Supplier Stability Index</inlineHelpText>
        <label>Supplier Stability Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_badged_employees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SPM Enter Total badged employees</description>
        <inlineHelpText>Enter Total badged employees</inlineHelpText>
        <label>Total badged employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>SPM_Accounts</fullName>
        <active>true</active>
        <description>SPM Accounts</description>
        <label>SPM Accounts</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Care_Ticket_Percent_Last_Quarter</fullName>
        <active>false</active>
        <description>Care Ticket Percent - Last Quarter - Value should be zero or greater in the format ##.#</description>
        <errorConditionFormula>Care_Ticket_Percent_Last_Quarter__c&lt;0 ||  ISNULL( Care_Ticket_Percent_Last_Quarter__c)</errorConditionFormula>
        <errorDisplayField>Care_Ticket_Percent_Last_Quarter__c</errorDisplayField>
        <errorMessage>Value should be zero or greater in the format ##.#</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Conversion_Rate_Percent_Last_Quarter</fullName>
        <active>false</active>
        <description>Conversion Rate Percent - Last Quarter - Value should be zero or greater in the format ##.#</description>
        <errorConditionFormula>Conversion_Rate_Percent_Last_Quarter__c&lt;0 ||  ISNULL(Conversion_Rate_Percent_Last_Quarter__c)</errorConditionFormula>
        <errorDisplayField>Conversion_Rate_Percent_Last_Quarter__c</errorDisplayField>
        <errorMessage>Value should be zero or greater in the format ##.#</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Current_Delinquency_Predictor</fullName>
        <active>false</active>
        <description>Current_Delinquency_Predictor__c  - Value should be zero or greater</description>
        <errorConditionFormula>(Current_Delinquency_Predictor__c &lt;0)|| ISNULL(Current_Delinquency_Predictor__c)</errorConditionFormula>
        <errorDisplayField>Current_Delinquency_Predictor__c</errorDisplayField>
        <errorMessage>Value should be zero or greater</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Cycle_Time_Percent_Last_Quarter</fullName>
        <active>false</active>
        <description>Cycle_Time_Percent_Last_Quarter - Value should be zero or greater in the format ##.#</description>
        <errorConditionFormula>Cycle_Time_Percent_Last_Quarter__c &lt;0 ||  ISNULL( Cycle_Time_Percent_Last_Quarter__c)</errorConditionFormula>
        <errorDisplayField>Cycle_Time_Percent_Last_Quarter__c</errorDisplayField>
        <errorMessage>Value should be zero or greater in the format ##.#</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Estimated_Total_Provider_Revenue</fullName>
        <active>false</active>
        <description>Estimated_Total_Provider_Revenue -  No Negative numbers</description>
        <errorConditionFormula>(Estimated_Total_Provider_Revenue__c&lt;0)|| ISNULL(Estimated_Total_Provider_Revenue__c)</errorConditionFormula>
        <errorDisplayField>Estimated_Total_Provider_Revenue__c</errorDisplayField>
        <errorMessage>Value should be zero or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Financial_Stress_Score</fullName>
        <active>false</active>
        <description>Financial_Stress_Score - Value should be zero or greater</description>
        <errorConditionFormula>(Financial_Stress_Score__c &lt;0)|| ISNULL(Financial_Stress_Score__c)</errorConditionFormula>
        <errorDisplayField>Financial_Stress_Score__c</errorDisplayField>
        <errorMessage>Value should be zero or greater</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_HD_Pro_Spend</fullName>
        <active>false</active>
        <description>HD_Pro_Spend - Value should be zero or greater</description>
        <errorConditionFormula>(HD_Pro_Spend__c &lt;0)|| ISNULL(HD_Pro_Spend__c)</errorConditionFormula>
        <errorDisplayField>HD_Pro_Spend__c</errorDisplayField>
        <errorMessage>Value should be zero or greater</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_IVOC_Number_Last_Quarter</fullName>
        <active>false</active>
        <description>IVOC_Number_Last_Quarter - Value should be zero or greater</description>
        <errorConditionFormula>(IVOC_Number_Last_Quarter__c &lt;0)|| ISNULL(IVOC_Number_Last_Quarter__c)</errorConditionFormula>
        <errorDisplayField>IVOC_Number_Last_Quarter__c</errorDisplayField>
        <errorMessage>Value should be zero or greater</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Last_4_Quarters_THD_Revenue</fullName>
        <active>false</active>
        <description>Last_4_Quarters_THD_Revenue - Value should be zero or greater</description>
        <errorConditionFormula>(Last_4_Quarters_THD_Revenue__c &lt;0)|| ISNULL( Last_4_Quarters_THD_Revenue__c)</errorConditionFormula>
        <errorDisplayField>Last_4_Quarters_THD_Revenue__c</errorDisplayField>
        <errorMessage>Value should be zero or greater</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_NumberOfEmployees</fullName>
        <active>false</active>
        <description>NumberOfEmployees - Value should be zero or greater</description>
        <errorConditionFormula>( NumberOfEmployees  &lt;0)|| ISNULL( NumberOfEmployees)</errorConditionFormula>
        <errorDisplayField>NumberOfEmployees</errorDisplayField>
        <errorMessage>Value should be zero or greater</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Paydex_Number</fullName>
        <active>false</active>
        <description>Paydex_Number - Value should be zero or greater</description>
        <errorConditionFormula>(Paydex_Number__c  &lt;0)|| ISNULL(Paydex_Number__c)</errorConditionFormula>
        <errorDisplayField>Paydex_Number__c</errorDisplayField>
        <errorMessage>Value should be zero or greater</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Percent_of_Business_with_Home_Depot</fullName>
        <active>false</active>
        <description>VR_Percent_of_Business_with_Home_Depot should be formatted as ##.# %</description>
        <errorConditionFormula>Percent_of_Business_with_Home_Depot__c&lt;0 ||  ISNULL(Percent_of_Business_with_Home_Depot__c)</errorConditionFormula>
        <errorDisplayField>Percent_of_Business_with_Home_Depot__c</errorDisplayField>
        <errorMessage>Value should be zero or greater in the format ##.#</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Previous_Delinquency_Predictor</fullName>
        <active>false</active>
        <description>Previous_Delinquency_Predictor__c - Positive number</description>
        <errorConditionFormula>(Previous_Delinquency_Predictor__c&lt;0)|| ISNULL(Previous_Delinquency_Predictor__c)</errorConditionFormula>
        <errorDisplayField>Previous_Delinquency_Predictor__c</errorDisplayField>
        <errorMessage>Value should be zero or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_SBI_Care_Ticket_Score_Last_Quarter</fullName>
        <active>false</active>
        <description>SBI_Care_Ticket_Score_Last_Quarter__c - Positive number</description>
        <errorConditionFormula>(SBI_Care_Ticket_Score_Last_Quarter__c&lt;0)|| ISNULL(SBI_Care_Ticket_Score_Last_Quarter__c)</errorConditionFormula>
        <errorDisplayField>SBI_Care_Ticket_Score_Last_Quarter__c</errorDisplayField>
        <errorMessage>Value should be zero or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_SBI_Cycle_Time_Score_Last_Quarter</fullName>
        <active>false</active>
        <description>SBI_Cycle_Time_Score_Last_Quarter__c - Positive number</description>
        <errorConditionFormula>(SBI_Cycle_Time_Score_Last_Quarter__c&lt;0)|| ISNULL(SBI_Cycle_Time_Score_Last_Quarter__c)</errorConditionFormula>
        <errorDisplayField>SBI_Cycle_Time_Score_Last_Quarter__c</errorDisplayField>
        <errorMessage>Value should be zero or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_SBI_IVOC_Score_Last_Quarter</fullName>
        <active>false</active>
        <description>SBI_IVOC_Score_Last_Quarter__c - Positive number</description>
        <errorConditionFormula>(SBI_IVOC_Score_Last_Quarter__c&lt;0)|| ISNULL(SBI_IVOC_Score_Last_Quarter__c)</errorConditionFormula>
        <errorDisplayField>SBI_IVOC_Score_Last_Quarter__c</errorDisplayField>
        <errorMessage>Value should be zero or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_SBI_Overall_Score_Last_Quarter</fullName>
        <active>false</active>
        <description>SBI_Overall_Score_Last_Quarter__c - Positive number</description>
        <errorConditionFormula>(SBI_Overall_Score_Last_Quarter__c&lt;0)|| ISNULL(SBI_Overall_Score_Last_Quarter__c)</errorConditionFormula>
        <errorDisplayField>SBI_Overall_Score_Last_Quarter__c</errorDisplayField>
        <errorMessage>Value should be zero or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_SBI_Sales_Score_Last_Quarter</fullName>
        <active>false</active>
        <description>SBI_Sales_Score_Last_Quarter__c - Positive number</description>
        <errorConditionFormula>(SBI_Sales_Score_Last_Quarter__c&lt;0)|| ISNULL(SBI_Sales_Score_Last_Quarter__c)</errorConditionFormula>
        <errorDisplayField>SBI_Sales_Score_Last_Quarter__c</errorDisplayField>
        <errorMessage>Value should be zero or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_SPM_Employee_Count</fullName>
        <active>false</active>
        <description>VR_SPM_Employee_Count - Custom field Employee count for SPM</description>
        <errorConditionFormula>(SPM_Employee_Count__c  &lt;0)|| ISNULL( SPM_Employee_Count__c)</errorConditionFormula>
        <errorDisplayField>SPM_Employee_Count__c</errorDisplayField>
        <errorMessage>Value should be zero or greater</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Sales_Dollar_Last_Quater</fullName>
        <active>false</active>
        <description>Sales_Dollar_Last_Quater__c - Positive number</description>
        <errorConditionFormula>(Sales_Dollar_Last_Quater__c&lt;0)|| ISNULL(Sales_Dollar_Last_Quater__c)</errorConditionFormula>
        <errorDisplayField>Sales_Dollar_Last_Quater__c</errorDisplayField>
        <errorMessage>Value should be zero or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Supplier_Risk_Evaluation</fullName>
        <active>false</active>
        <description>Supplier_Risk_Evaluation__c - Positive number</description>
        <errorConditionFormula>(Supplier_Risk_Evaluation__c&lt;0)|| ISNULL(Supplier_Risk_Evaluation__c)</errorConditionFormula>
        <errorDisplayField>Supplier_Risk_Evaluation__c</errorDisplayField>
        <errorMessage>Value should be zero or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Supplier_Stability_Index</fullName>
        <active>false</active>
        <description>Supplier_Stability_Index__c - Positive number</description>
        <errorConditionFormula>(Supplier_Stability_Index__c&lt;0)|| ISNULL(Supplier_Stability_Index__c)</errorConditionFormula>
        <errorDisplayField>Supplier_Stability_Index__c</errorDisplayField>
        <errorMessage>Value should be zero or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Total_badged_employees</fullName>
        <active>false</active>
        <description>Total badged employees - Positive number</description>
        <errorConditionFormula>(Total_badged_employees__c&lt;0)|| ISNULL(Total_badged_employees__c)</errorConditionFormula>
        <errorDisplayField>Total_badged_employees__c</errorDisplayField>
        <errorMessage>Value should be zero or greater.</errorMessage>
    </validationRules>
</CustomObject>